kubernetes/main/apps/networking/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    external-dns.kubernetes.io/target: &hostname main-gateway.techtales.io
    gatus.home-operations.com/endpoint: |
      group: internal
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.100.200
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.techtales.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: techtales-io-tls
